# RetinaFace-Cpp

./: README.md
Demo/ncnn/: CMakeLists.txt
Demo/ncnn/models/: mnet_opt.ncnnproto  retina-opt.param
Demo/ncnn/src/: anchor_generator.cpp  anchor_generator.h  detect.cpp  retinaface.cpp  retinaface.h  tools.cpp  tools.h
Demo/retinaface_as/: local.properties
Demo/retinaface_as/app/: CMakeLists.txt  build.gradle
SpeedTest/ncnn/: mnet.ncnn.param  run.sh
SpeedTest/rokidnn/: run.sh
caffemodel/: mnet.caffemodel  mnet.prototxt
mxnetmodel/: mnet.25-0000.params  mnet.25-symbol.json
results/R50/wider_cpp/: wider_pr_info_retina_cpp_easy_val.mat  wider_pr_info_retina_cpp_hard_val.mat  wider_pr_info_retina_cpp_medium_val.mat
results/R50/wider_python/: wider_pr_info_retina_python_easy_val.mat  wider_pr_info_retina_python_hard_val.mat  wider_pr_info_retina_python_medium_val.mat
results/cpp_detect/0--Parade/: 0_Parade_Parade_0_120.txt  0_Parade_Parade_0_246.txt  0_Parade_Parade_0_275.txt  0_Parade_Parade_0_286.txt  0_Parade_Parade_0_353.txt  0_Parade_Parade_0_377.txt  0_Parade_Parade_0_382.txt  0_Parade_Parade_0_43.txt  0_Parade_Parade_0_443.txt  0_Parade_Parade_0_459.txt  0_Parade_Parade_0_465.txt  0_Parade_Parade_0_502.txt  0_Parade_Parade_0_72.txt  0_Parade_Parade_0_757.txt  (+30 more)
results/wider_cpp/: wider_pr_info_retina_cpp_easy_val.mat
results/wider_python/: wider_pr_info_retina_python_easy_val.mat
retinaface_ncnn/: CMakeLists.txt
retinaface_ncnn/src/: tools.cpp
source/: anchor_generator.cpp  anchor_generator.h  config.cpp  config.h  detect.cpp
(+12456 files in other folders)
